# web_search_agent

./: .gitignore  DEPLOYMENT.md  FREE_DEPLOYMENT_GUIDE.md  FRONTEND_INTEGRATION.md  FRONTEND_RAG_INTEGRATION.md  RAILWAY_TROUBLESHOOTING.md  RENDER_TROUBLESHOOTING.md  TIMEOUT_FIXES.md  cloudbuild.yaml  debug_connection.py  deploy-railway-manual.sh  deploy-railway.sh  deploy-render.sh  deploy.sh  docker-compose.yml  flowchat.md  nginx.conf  readme.md  render.yaml  requirements.txt  setup-gcp-secrets.sh  setup-local.sh  test_integration.py  test_web_search_flow.py
backend/: .dockerignore  CHROMADB_DEPLOYMENT_OPTIONS.md  COMBINED_SUMMARY_FEATURE.md  DOCKER_SETUP.md  Dockerfile  ENHANCED_FEATURES.md  FINANCIAL_QUERY_FIXES.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_SUMMARY_REPORT.md  IMPROVEMENTS.md  Procfile  QUICKSTART.md  RAG_ENHANCEMENTS_V2.md  RAG_SETUP_UV.md  RAG_TRANSFORMATION_PLAN.md  README.md  README_UV.md  SIMILARITY_IMPROVEMENTS.md  WEB_SCRAPER_IMPROVEMENTS.md  build.sh  cloudbuild.yaml  create_rag_structure.py  demo_api_comparison.py  docker-compose.simple.yml  docker-compose.yml  example_usage.py  hybrid_server.py  minimal_server.py  nixpacks.toml  pyproject.toml  quick_start.py  quick_test.py  requirements-render.txt  requirements.txt  requirements_rag.txt  run.sh  run_with_uv.py  setup_api_keys.py  setup_gemini_api.py  stable_server.py  (+15 more)
backend/data/: query_classification_cache.json  similarity_cache.json  similarity_cache.json.backup
backend/data/conversations/: conversations.json
backend/data/test_vector_store/: chroma.sqlite3
backend/data/vector_store/: chroma.sqlite3
backend/docker/: Dockerfile.chromadb  Dockerfile.rag  Dockerfile.rag-light  build.sh  nginx.conf  run.sh
backend/src/: __init__.py
backend/src/agent/: rag_agent.py
backend/src/agents/: __init__.py  web_scraping_agent.py
backend/src/ai/: __init__.py  embeddings.py  gemini_summarizer.py  lightweight_summarizer.py  summarizer.py
backend/src/api/: __init__.py  main.py  main_render.py  rag_main.py
backend/src/cli/: main.py
backend/src/core/: __init__.py  enhanced_scraper.py  lightweight_scraper.py  lightweight_similarity.py  query_validator.py  similarity_detector.py  web_scraper.py
backend/src/core/knowledge/: document_processor.py
backend/src/core/llm/: gemini_client.py
backend/src/core/memory/: conversation_memory.py
backend/src/core/tools/: web_search_tool.py
backend/src/infrastructure/monitoring/: __init__.py
backend/src/infrastructure/vector_database/: chroma_client.py
backend/src/services/: enhanced_research_service.py
data/: query_classification_cache.json  similarity_cache.json
frontend/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  next.config.js  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: api-client.ts  api-config.ts  layout.tsx  page.tsx  types.ts
frontend/src/app/health/: route.ts
frontend/src/components/: LoadingQuotes.tsx  QueryClientProvider.tsx
