[project]
name = "web-search-agent"
version = "0.1.0"
description = "AI-powered web search agent with intelligent summarization"
authors = [
    {name = "Web Search Agent", email = "dev@websearchagent.com"}
]
dependencies = [
    # Core FastAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    
    # RAG Core Dependencies
    "google-generativeai>=0.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    
    # Vector & Embedding Dependencies
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    
    # Document Processing
    "beautifulsoup4>=4.12.0",
    "pypdf>=3.17.0",
    "python-docx>=0.8.11",
    "markdown>=3.5.0",
    "python-multipart>=0.0.6",
    
    # Web Scraping (Enhanced)
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Memory & Caching
    "redis>=5.0.0",
    "diskcache>=5.6.0",
    
    # Text Processing & NLP
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "textstat>=0.7.0",
    "python-dateutil>=2.8.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # Utility Dependencies
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "asyncio-throttle>=1.0.2",
    "tenacity>=8.2.0",
    
    # Legacy support
    "openai>=1.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "aiofiles>=23.0.0"
]
requires-python = ">=3.9"

[project.scripts]
start-server = "src.api.main:start_server"
search-cli = "src.cli.main:main"
setup-gemini = "setup_gemini_api:main"
test-enhanced = "test_enhanced_research:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 